--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                      <div class="main_section_centered">
                         <a href ="reviews/hackney_rev.html">
                         <div class="article_image">
-                            <img class ="album_cover" src="/album_art/rolling_stones.jpg" alt="Rolling Stones Album Cover">
+                            <img class ="album_cover" src="album_art/rolling_stones.jpg" alt="Rolling Stones Album Cover">
                         </div></a>
                         <a href ="reviews/hackney_rev.html">
                         <div class="article_genre">
@@ -191,7 +191,7 @@
             <div class="main_section_centered">
                 <a href ="reviews/Diamonds_rev.html">
                 <div class="article_image">
-                    <img class ="album_cover" src="/album_art/Diamonds_And_Pearls_-_The_Singles.jpg" alt="Prince Album Cover">
+                    <img class ="album_cover" src="album_art/Diamonds_And_Pearls_-_The_Singles.jpg" alt="Prince Album Cover">
                 </div></a>
                 <a href ="reviews/Diamonds_rev.html">
                 <div class="article_genre">
@@ -200,7 +200,7 @@
                     </p>
                 </div>
                 <div class="article_title">
-                    <h3>Prince/The New Power Generation<br>Diamonds and Pearls (Super Deluxe Edition)</h3>
+                    <h3>Diamonds and Pearls (Super Deluxe Edition)</h3>
                 </div>
                 <div class="article_description">
                     <p class="article_description_content" style="text-align: center; background-color: white;">
