--- a/pop.html
+++ b/pop.html
@@ -63,7 +63,7 @@
                     <div class="main_section_centered">
                         <a href ="reviews/Diamonds_rev.html">
                         <div class="article_image">
-                            <img class ="album_cover" src="/album_art/Diamonds_And_Pearls_-_The_Singles.jpg" alt="Prince Album Cover">
+                            <img class ="album_cover" src="album_art/Diamonds_And_Pearls_-_The_Singles.jpg" alt="Prince Album Cover">
                         </div></a>
                         <a href ="reviews/Diamonds_rev.html">
                         <div class="article_title">
@@ -99,7 +99,7 @@
             <div class="main_section_centered">
                 <div class="article_image">
                     <a href ="reviews/adele_rev.html">
-                    <img class ="album_cover" src="/album_art/adele_21.jpg" alt="Prince Album Cover">
+                    <img class ="album_cover" src="album_art/adele_21.jpg" alt="Prince Album Cover">
                 </div></a>
                 <a href ="reviews/adele_rev.html">
                 <div class="article_title">
@@ -139,7 +139,7 @@
                 <div class="right_section_centered">
                     <a href ="reviews/taylor1989_rev.html">
                     <div class="article_image_right">
-                        <img class ="album_cover" src="/album_art/1989_taylor_s_version_album_cover.png" alt="Taylor Swift Album Cover">
+                        <img class ="album_cover" src="album_art/1989_taylor_s_version_album_cover.png" alt="Taylor Swift Album Cover">
                     </div></a>
                     <a href ="reviews/taylor1989_rev.html">
                     <div class="article_title">
