--- a/reviews/taylor1989_rev.html
+++ b/reviews/taylor1989_rev.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="/styles_2.css">
+    <link rel="stylesheet" type="text/css" href="../styles_2.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prince/The New Power Generation
@@ -23,8 +23,8 @@
     <div class="header">
 
         <div class="logo_space" style="background-color:#0032e8;">
-            <a href = /index.html>
-            <img class="logo_image" src="/OM_Logo_white_text.png" alt="website logo">
+            <a href = ../index.html>
+            <img class="logo_image" src="../OM_Logo_white_text.png" alt="website logo">
             </a>
         </div>
 
@@ -39,11 +39,11 @@
         <ul class="main-navbar-text"> 
             <li class="dropdown">Genres
                 <div class="dropdown-content">
-                    <a href="/hiphop.html">Hip Hop</a>
-                    <a href="/rock.html">Rock</a>
-                    <a href="/bollywood.html">Bollywood</a>
-                    <a href="/jazz.html">Jazz</a>
-                    <a href="/pop.html">Pop</a>
+                    <a href="../hiphop.html">Hip Hop</a>
+                    <a href="../rock.html">Rock</a>
+                    <a href="../bollywood.html">Bollywood</a>
+                    <a href="../jazz.html">Jazz</a>
+                    <a href="../pop.html">Pop</a>
                 </div>
             </li>
             <li>Updates</li>
@@ -66,7 +66,7 @@
             <div class="article_image_section">
             <!-- section -->
                 <div class="article_main_image">
-                    <img class ="prince" src="/album_art/1989_taylor_s_version_album_cover.png" alt="Taylor Swift Album Cover">
+                    <img class ="prince" src="../album_art/1989_taylor_s_version_album_cover.png" alt="Taylor Swift Album Cover">
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
         <div class="footer_logo">
             <!-- logo -->
             <!-- <div class="logo_space_footer" style="background-color: gray;"> -->
-                <img class="logo_image" src="OM_Logo_white_text.png" alt="website logo">
+                <img class="logo_image" src="../OM_Logo_white_text.png" alt="website logo">
             <!-- </div> -->
 
         </div>
